@@ -1,2 +1,2 @@
-EBUILD cl-decoration-meta-11.0-r2.ebuild 969 RMD160 368f0630d01014af57351a72be2a85502078926c SHA1 4dd64479df80f5c4a32190248c525f6fa2f8e4da SHA256 c1308591a099869f4c13daddcf234c00f3ef980e01f4f4f745ae556b740d0f83
-MISC ChangeLog 523 RMD160 2b2dcaadfadb8bda19b2b9658de883bfcf7aaac5 SHA1 b91dfa3c4249cd7110364125a2adec23f4660de5 SHA256 1766c3c9fcf5b576be58105ee4b15e6c9a314322debe9570dc5e6517923f483c
+EBUILD cl-decoration-meta-11.0-r3.ebuild 907 RMD160 fb5e285833e3f416826c08571eb24afcce71c6aa SHA1 27c0d97e267575aac942d1464d65b75f8a57b755 SHA256 c212838fa0a97dd010234e78e90d21d06c1df1b4e1da1f81dcb549d1abfe9002
+MISC ChangeLog 743 RMD160 79bb3f8163c99aa68b308cb85141876b1bf9ffa1 SHA1 e51bf789016fc3ef9b3fd90f6fd24f612b5cc947 SHA256 55856e779d0d7f7d4fe6ed9170283d5221b31d610afdab9c790ee0c7b72a32d8
