@@ -1,3 +1,3 @@
-EBUILD cldg-meta-10.9-r1.ebuild 2359 RMD160 dc9ade6d7c20f1cf77e6c7a58f0c3a77a845c56e SHA1 a9bfbbc0fbc0bc1554d737afc2de7cbabc310564 SHA256 7c320a68ee55f73e00b889961768b9e8709b121d3a93c781b3036e7e9bb319b2
-MISC ChangeLog 2572 RMD160 9747777d174abf8d3d00c14722817cb590c1e983 SHA1 39ac64dfaa0d1b2e2767f68cccd3ced9154fc306 SHA256 0bbc57fdc52ee26059c755ecca2fbfabb7ab2de991ee374b7a47269fd2ffa948
+EBUILD cldg-meta-10.9-r2.ebuild 1812 RMD160 5135054466c4e73317c110badc3a76d95f591b4b SHA1 8b3e919c7ae774040e053ac4b9a6800f4593bbee SHA256 e405c4288a9b9438611e99cd091320fcf66c541effed191a2b572a6a7e90b439
+MISC ChangeLog 2772 RMD160 65b92f8dd5109235548b81040f68d7e70e83ad79 SHA1 a88c52182c0929c01080b60d32a686c4aab9fa4b SHA256 a21863a241c36fd388f7f6665e0ecb979a04d90727f5f4c2fdc3449c8ac83224
 MISC metadata.xml 263 RMD160 596dddaf55974cdaa7642643631b4e506681adde SHA1 56cba5a8dbf3977d7891ec138b75e8fe3eb6fadd SHA256 0a6e854923033ffffca2b1ce19e0b12ae33a4d6a372b2613e3ded5b750899526
