@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*cldg-meta-10.9-r2 (29 Nov 2010)
+
+  29 Nov 2010; Трацевский Александр <alex@gentoo.org>
+  -cldg-meta-10.9-r1.ebuild, +cldg-meta-10.9-r2.ebuild:
+  Added calculate_nocompiz USE flag
+
 *cldg-meta-10.9-r1 (17 Nov 2010)
 
   17 Nov 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
