@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*cl-decoration-meta-11.0-r3 (29 Nov 2010)
+
+  29 Nov 2010; Трацевский Александр <alex@gentoo.org>
+  -cl-decoration-meta-11.0-r2.ebuild, +cl-decoration-meta-11.0-r3.ebuild:
+  Moved compiz to cldg-meta 
+
 *cl-decoration-meta-11.0-r2 (25 Nov 2010)
 
   25 Nov 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
